<resources>
    <string name="app_name">Cloud Vision</string>
    <string name="action_settings">Settings</string>

    <!-- Floating Action Button -->
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>

    <!-- Errors -->
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="api_request_error">Failed to make API request. Check your internet connection.</string>
    <string name="header_image_load_error">Failed to load header image.</string>

    <!-- Main Activity -->
    <string name="title_activity_main">Cloud Vision Demo</string>
    <string name="title_tab_labels">Labels</string>
    <string name="title_tab_logos">Logo</string>
    <string name="title_tab_landmarks">Landmark</string>
    <string name="title_tab_default">Dumb</string>
    
    <!-- Select Image Fragment -->
    <string-array name="loading_subtitles">
        <item>Training robots</item>
        <item>Expanding neural networks</item>
        <item>Distorting the space-time continuum</item>
        <item>Collecting medicinal herbs</item>
        <item>Calibrating thrusters</item>
        <item>The architects are still drafting</item>
        <item>Breeding bits</item>
        <item>Dreaming for faster computers</item>
        <item>Moving satellites into position</item>
        <item>Warming up Large Hadron Collider</item>
        <item>Reconfiguring the office coffee machine</item>
        <item>Counting backwards from infinity</item>
        <item>Deterministically simulating the future</item>
        <item>Adjusting data for your IQ</item>
        <item>Improving your reading skills</item>
        <item>Recalculating π</item>
        <item>Starting missile launch sequence</item>
        <item>Waking up Artificial Intelligence</item>
        <item>Rewinding the DVDs</item>
        <item>Measuring cable length to fetch data</item>
    </string-array>
    <string name="title_gallery_chooser">Select a photo</string>
    <string name="error_handling_image">We had a problem getting the picture. Try with another.</string>

    <!-- Main Activity -->
    <string name="title_hint">Hint</string>
    <string name="hint_label">Each thing detected by Cloud Vision API gets a tag and a score. The tag is nothing more than a label, and the score shows the similarity degree found in the picture.</string>
    <string name="landmark_location">Location</string>
    <string name="landmark_empty_message">Sorry, we haven\'t found any Landmark</string>
    <string name="logo_empty_message">Sorry, we haven\'t found any Logo</string>
    <string name="wikipedia_powered">Powered by Wikipedia</string>
    <string name="btn_more">More</string>

    <!-- Brand Properties (from Wikidata) -->
    <string name="p_website">Website</string>
    <string name="p_logo">Logo</string>
    <string name="p_country">Country</string>
    <string name="p_inception">Inception Date</string>
    <string name="p_twitter">Twitter Profile</string>
    <string name="p_facebook">Facebook Profile</string>
    <string name="p_founders">Founders</string>
    <string name="p_headquarters">Headquarters</string>
    <string name="p_divisions">Divisions</string>
    <string name="p_employees">Employee Number</string>
    <string name="p_genre">Genre</string>
    <string name="p_awards">Awards</string>
    <string name="p_developers">Developers</string>
    <string name="p_languages">Programming Languages</string>
    <string name="p_license">Copyright Licenses</string>

    <!-- Preferences -->
    <string name="pref_category_cloud_vision">Cloud Vision API</string>
    <string name="pref_title_image_quality">Image Quality</string>
    <string name="pref_image_quality">Used for compression. 0 meaning compress for small size, 100 meaning compress for max quality.</string>
    <string name="pref_title_max_labels">Max Number of tags</string>
    <string name="pref_max_labels">How many labels you want us to search for each image?</string>
    <string name="pref_category_about">About</string>
    <string name="pref_about">Cloud Vision Demo is an Android (4.4+) app that demonstrates the Cloud Vision API in a simple and well documented way. With the support of the query APIs of  Wikipedia and Wikidata, it shows additional info about the logo and landmarks identified in the image, besides a list of the related tags.</string>
    <string name="pref_motivation">It was developed by me with some simple purposes in mind: learn a bit more about computer vision; fill my free time creating an Android app; know better the Google Cloud Platform; and practice my english writing skills (nothing better than do documentation, right!?). As the app was taking form, my interest in show it for more people increased, so I decided to make it open source and write academic papers about this subject.</string>
    <string name="pref_check_on_github">Check on GitHub</string>

    <!-- Placeholders (used just in development) -->
    <string name="placeholder_article_name">Article Name</string>
    <string name="placeholder_article_info">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis metus diam. Proin nec ligula vitae magna vehicula pulvinar id quis nibh. Nullam quis nunc enim. Vestibulum luctus metus mollis leo bibendum finibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse in venenatis odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus facilisis posuere ullamcorper. Morbi viverra sem vitae eros sodales, quis ullamcorper elit vulputate. Curabitur vel nunc nec arcu dignissim auctor. Vestibulum rhoncus leo tellus, eu tincidunt orci blandit non. Integer efficitur ac diam non ultrices."</string>
    <string name="placeholder_property_name">Property Name</string>
    <string name="placeholder_property_value">Property Value</string>
</resources>
