<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sbpf="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_category_cloud_vision">

        <!-- Image quality -->
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="75"
            android:key="pref_image_quality"
            android:summary="@string/pref_image_quality"
            android:title="@string/pref_title_image_quality"
            sbpf:msbp_dialogEnabled="false"
            sbpf:msbp_interval="5"
            sbpf:msbp_maxValue="100"
            sbpf:msbp_measurementUnit="%"
            sbpf:msbp_minValue="0"
            sbpf:msbp_view_enabled="false" />

        <!-- Max number of tags -->
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="5"
            android:key="pref_max_labels"
            android:summary="@string/pref_max_labels"
            android:title="@string/pref_title_max_labels"
            sbpf:msbp_dialogEnabled="false"
            sbpf:msbp_interval="1"
            sbpf:msbp_maxValue="15"
            sbpf:msbp_minValue="0"
            sbpf:msbp_view_enabled="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_about">

        <!-- About text -->
        <Preference
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/pref_about" />

        <!-- Motivation text -->
        <Preference
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/pref_motivation" />

        <!-- Check on GitHub -->
        <Preference
            android:title="@string/pref_check_on_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/MathiasBerwig/CloudVision" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>