<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_article_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryText"
            tools:text="@string/placeholder_article_name" />

        <TextView
            android:id="@+id/txt_article_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/txt_article_name"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorSecondaryText"
            tools:text="@string/placeholder_article_info" />

        <TextView
            android:id="@+id/txt_wikipedia_powered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_open_in_wikipedia"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/ic_wikipedia_grey_24dp"
            android:gravity="center_vertical"
            android:text="@string/wikipedia_powered"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_open_in_wikipedia"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txt_article_description"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/btn_more"
            android:textSize="13sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
